<resources>
    <string name="app_name">SignUpForm</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">Ok</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>

    <string name="hint">Please enter your username</string>
    <string name="username">Username:</string>

    <string name="password">Password:</string>
    <string name="password_hint">Please enter your password</string>
    <string name="confirm">Password Confirm:</string>
    <string name="confirm_hint">Please re-enter your password</string>
    <string name="dummy">This is for a test of git</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="welcome_format">Welcome, %1$s!</string>

</resources>
